--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ ul li #headIcon {
     right: 50px;
     display: inline;
     font-size: 20px;
-    padding: 2%;
+    padding: 2% 3%;
     cursor: pointer;
     border: 1px solid #999;
     border-radius: 5px;
